--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,9 @@ numpy = "^1.23.3"
 pandas = "^1.5.0"
 scikit-learn = "^1.1.2"
 black = "^22.10.0"
+pytest = "^7.2.0"
+mypy = "^0.982"
+pre-commit = "^2.20.0"
 
 
 [build-system]
