--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,8 @@ black = "^22.10.0"
 pytest = "^7.2.0"
 mypy = "^0.982"
 pre-commit = "^2.20.0"
+matplotlib = "^3.6.2"
+flake8 = "^5.0.4"
 
 
 [build-system]
